# cloudMigration

./: .env.example  .gitignore  architecture.md  changelog.md  claude.md  data_model.md  docker-compose.temporal.yml  execution_plan.md  project_spec.md  pyproject.toml
app/: __init__.py  cli.py  main.py
app/adapters/: __init__.py  base.py  registry.py
app/adapters/bare_metal/: __init__.py  adapter.py  mock_data.py
app/adapters/hyperv/: __init__.py  adapter.py  mock_data.py
app/adapters/ibm_classic/: __init__.py  adapter.py  mock_data.py
app/adapters/kubernetes/: __init__.py  adapter.py  mock_data.py
app/adapters/vmware/: __init__.py  adapter.py  mock_data.py
app/api/: __init__.py  dependencies.py
app/api/routes/: adapters.py  analysis.py  discovery.py  migration.py
app/blueprints/: __init__.py  engine.py
app/blueprints/templates/: bare_metal_rebuild.yaml  hyperv_lift_and_shift.yaml  (+3 more)
app/core/: __init__.py  config.py  exceptions.py
app/graph/: __init__.py  engine.py
app/models/: __init__.py  canonical.py  common.py  k8s_target.py  replication.py  responses.py  vpc.py
app/services/: containerization.py  data_migration.py  discovery.py  firewall_engine.py  k8s_migration.py  k8s_translation.py  network_planner.py  orchestrator.py  reliability.py  replication_engine.py  strategy.py  translation.py  validation.py
app/terraform/: __init__.py  generator.py
app/utils/: logging.py
app/workflows/: __init__.py  activities.py  migration_workflow.py  worker.py
docs/: Multi-Platform Migration Orchestration Engine - HighLevel Design Doc.docx  issues.md
(+1 files in other folders)
